@@ -226,7 +226,7 @@ DT[,{
 
 \subsection{Inside each group, why is the group variable a long vector containing the same value repeated?}
 Please upgrade to v1.6.1 or later. This is no longer true. In the previous FAQ, \code{x} is a grouping variable
-and now has length 1 for efficiency and convenience. Prior to v1.6.1 \code{x} repeated the group value to match
+and now has length 1 for efficiency and convenience. Prior to v1.6.1, \code{x} repeated the group value to match
 the number of rows in that group. There is no longer any difference between the following two statements.
 <<>>=
 DT[,list(g=1,h=2,i=3,j=4,repeatgroupname=x,sum(y)),by=x]     
